2010-10-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: remove unneeded 'bindir compile check' test.
	* tests/bindir.at (bindir compile check): Remove.

2010-10-14  Peter Rosin  <peda@lysator.liu.se>

	tests: fix $EXEEXT typo.
	* tests/depdemo-relink.test (func_restore_files): Use $EXEEXT
	instead of $EXEXT.

2010-10-12  Simon Josefsson  <simon@josefsson.org>
	    Matěj Týč <matej.tyc@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: improve description of -no-undefined.
	* doc/libtool.texi (Link mode): Fix -no-undefined description.
	(Inter-library dependencies): Use Windows not AIX as example
	system.  Clarify need for symbol resolution at library creation
	time.

2010-10-09  Paolo Bonzini  <bonzini@gnu.org>

	Add missing sysroot resolution.
	* libltdl/config/ltmain.m4sh (func_mode_link): Resolve sysroot
	when fetching the install directory of dependent libraries.
	Reported by Lionel Landwerlin <llandwerlin@gmail.com>,
	patch by Khem Raj <raj.khem@gmail.com>.
	* THANKS: Reorder entries, add Khem and Lionel.

2010-10-07  Roumen Petrov  <bugtrack@roumenpetrov.info>

	Add test case for 69e77671 (cwrapper PATH manipulation order)
	* tests/cwrapper.at: Add new test 'cwrapper and installed shared
	libraries.'

2010-10-04  Peter Rosin  <peda@lysator.liu.se>

	cwrapper: split long lines when dumping the wrapper script.
	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src): If
	the wrapper script contains long lines, split them for
	readability and to conform with C standards.
	* tests/cwrapper.at (cwrapper string length): New test, making
	sure we don't regress.

	msvc: handle symbols from different files independently.
	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS)
	<dumpbin, lt_cv_sys_global_symbol_pipe>: Make all sections
	viable for symbol extraction again when the symbols from a new
	file starts.  Fixes tests/tagdemo-make.test for MSVC 10.
	* tests/dumpbin-symbols.at: New test, making sure we don't
	regress.